# receipt-parser-legacy

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  Makefile  Pipfile  README.md  config.yml  importer.py  importer.sh  objectview.py  parser.py  pyproject.toml  requirements.txt  stats.csv
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: main.yml
data/: .gitignore
data/txt/: IMG0004.jpg.txt  IMG0006.jpg.txt  IMG0007.jpg.txt  IMG0008.jpg.txt
docs/receipt_parser_core/: config.md  enhancer.md  index.md  objectview.md  parse.md  receipt.md  util.md
parser/: __init__.py  __main__.py  config.py  importer.py  importer_pytesseract.py  objectview.py  parse.py  parser.py  receipt.py
parser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
parser/tests/: README.md  test_parser.py
parser/tests/data/: config.yml
parser/tests/data/receipts/: sample_text_receipt_dates.txt  sample_text_receipt_to_normalize.txt
receipt_parser/: __init__.py  config.py  enhancer.py  importer.py  parse.py  receipt.py
receipt_parser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
receipt_parser2/: config.py  enhancer.py  parse.py
receipt_parser_core/: config.py  enhancer.py  objectview.py  parse.py  receipt.py  util.py
tests/: README.md  test_parser.py  test_sample.py
tests/data/receipts/: sample_text_fuzzy_find.txt  sample_text_receipt_sum.txt
