[tool.poetry]
name = "receipt_parser"
version = "0.1.3"
description = "A supermarket receipt parser written in Python using tesseract OCR"
authors = ["Matthias Endler <matthias-endler@gmx.net>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
pyyaml = "^5.3"
python-dateutil = "^2.8.1"
Pillow = "^8.0.1"
wand = "^0.6.3"
pytesseract = "^0.3.6"
terminaltables = "^3.1.0"
numpy = "^1.19.4"
opencv-python = "^4.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = {version = "^20.8b1", allow-prereleases = true}

[tool.poetry.scripts]
run = 'receipt_parser:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
