[tool.poetry]
name = "receipt_parser_core"

version = "0.2.5"
description = "A supermarket receipt parser written in Python using tesseract OCR"

authors = ["Matthias Endler <matthias-endler@gmx.net>", "William Todt <william.todt@mailbox.org>", "Linus Dietz <me@linusdietz.eu>" ]
license = "Apache-2.0"

homepage = "https://github.com/ReceiptManager/receipt-parser-legacy"
repository = "https://github.com/ReceiptManager/receipt-parser-legacy"

keywords = ["receipt", "ocr", "parser"]

readme = "README.md"

[tool.poetry.build]
generate-setup-file = false

[tool.poetry.dependencies]


[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = {version = "^22.6", allow-prereleases = true}

[tool.poetry.scripts]
run = 'receipt_parser_core:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
